src/components/Header/header.css
.nav-container {
  display: flex;
  flex-direction: row;

  justify-content: space-around;
  width: 100%;
  height: 100%;
}

.nav-item {
  display: flex;
  align-items: center;

  height: 100%;
  width: 100%;
  text-align: center;
}

.logo {
  justify-content: flex-start;
  padding-left: 2%;
}

.menu {
  justify-content: flex-end;
  z-index: 2;
  padding-right: 2%;
}

.heading-container {
  justify-content: center;
}

.nav-heading {
  font-family: 'Poppins', sans-serif;
}

@media screen and (min-width: 501px) {
    .nav-heading {
        font-size: 1.1em;
    }
}

